--- a/wxApp/components/question/list.wxml
+++ b/wxApp/components/question/list.wxml
@@ -6,7 +6,7 @@
     <view class="body">
         <view class="header">第{{index}}题</view>
 
-        <info question="{{question}}" offset="{{offset}}" bindAfterAnswer="afterAnswer" />
+        <info question="{{question}}" offset="{{offset}}" bindAfterAnswer="afterAnswer" eid="{{eid}}"/>
 
         <view class="actions weui-flex">
             <view class="weui-flex__item-auto prev" bindtap="prev">
