--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -8,7 +8,7 @@
         </navigator>
     </view>
 
-    <view class="weui-cells weui-cells_after-title school">
+    <view class="weui-cells weui-cells_after-title school" hidden="{{true}}">
         <view class="weui-cell weui-cell_access">领途学院</view>
         <view class="weui-cell" bindtap="play">
             <view class="weui-cell__hd" wx:if="{{domain}}">
